@@ -1,6 +1,8 @@
 NEXT RELEASE
 
 Update xarray from 0.8.2 to 0.9.2
+Handle unsigned int8 values in netcdf4 classic
+Encode asset management last modified timestamp as string
 
 Release 1.3.3
 
